# gdtpporter

./: .gitignore  LICENSE  README.md  build_entry.py  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml  tests.yml
gd_tp_porter/: __init__.py  __main__.py  extract.py  guardrails.py  gui_entry.py  icon_split.py  plist_utils.py  porter.py  sheet_audit.py
gd_tp_porter/vanilla_reference/: sizes.json
tests/: test_guardrails.py  test_icon_split.py  test_plist_utils.py  test_porter_integration.py  test_sheet_audit.py
