[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gd-tp-porter"
version = "0.1.0"
description = "Port Geometry Dash 2.1-era texture packs to 2.2"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "gd-tp-porter contributors" }]
dependencies = [
    "Pillow>=9.0",
    "rarfile>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
build = ["pyinstaller>=6.0"]

[project.scripts]
gd-tp-porter = "gd_tp_porter.__main__:main"

[tool.setuptools.packages.find]
include = ["gd_tp_porter*"]

[tool.setuptools.package-data]
gd_tp_porter = ["vanilla_reference/*"]
